# Ascend310-MixFormer

./: CMakeLists.txt  README.md
include/: mixformer.h
src/: main.cpp  mixformer.cpp
